# Tegano

./: .gitignore  CMakeLists.txt  GNUmakefile  INSTALL  LAYOUT  README  TODO
clients/cmdline/: CMakeLists.txt
clients/lib/: CMakeLists.txt
examples/modules/normalizer1/: CMakeLists.txt  GNUmakefile  Makefile.W32
examples/modules/normalizer2/: CMakeLists.txt  GNUmakefile  Makefile.W32
src/: CMakeLists.txt  GNUmakefile  Makefile.W32  acceptor.hpp  handlerConfig.hpp  mainConnectionHandler.cpp  posixMain.cpp  server.cpp  serverConnectionHandler.cpp  serverConnectionHandler.hpp  serverHandler.cpp  serverHandler.hpp  winMain.cpp  wolfilter.cpp  wolfilterCommandLine.cpp  wolfilterCommandLine.hpp  wolfwizard.cpp  wolfwizardCommandLine.cpp  wolfwizardCommandLine.hpp
src/config/: GNUmakefile  Makefile.W32  applicationConfiguration.cpp  applicationConfiguration.hpp  applicationProperties.cpp  bannerConfiguration.cpp  bannerConfiguration.hpp  cmdLineConfiguration.cpp  cmdLineConfiguration.hpp  loggerConfiguration.cpp  loggerConfiguration.hpp  moduleDirectoryImpl.cpp  moduleDirectoryImpl.hpp  moduleLoader.hpp  procProviderConfiguration.cpp  procProviderConfiguration.hpp  serverConfiguration.cpp  serverConfiguration.hpp  serviceConfiguration.cpp  serviceConfiguration.hpp
src/libconfig/: AAAAproviderConfiguration.cpp  AAAAproviderConfiguration.hpp  CMakeLists.txt  GNUmakefile  Makefile.W32  aaaaProviderConfiguration.cpp  aaaaProviderConfiguration.hpp  applicationConfiguration.cpp  applicationConfiguration.hpp  applicationInfo.cpp  applicationInfo.hpp  applicationProperties.cpp  applicationProperties.hpp  bannerConfiguration.cpp  bannerConfiguration.hpp  cmdLineConfiguration.cpp  cmdLineConfiguration.hpp  databaseProviderConfiguration.cpp  databaseProviderConfiguration.hpp  loggerConfiguration.cpp  loggerConfiguration.hpp  moduleConfigParseUtils.hpp  moduleDirectoryImpl.cpp  moduleDirectoryImpl.hpp  moduleLoader.cpp  moduleLoader.hpp  procProviderConfiguration.cpp  procProviderConfiguration.hpp  serverConfiguration.cpp  serverConfiguration.hpp  serverEndpoint.cpp  serviceConfiguration.cpp  serviceConfiguration.hpp
src/libprovider/: AAAAproviderConfig.cpp  AAAAproviderImpl.cpp  AAAAproviderImpl.hpp  Audit.cpp  Authentication.cpp  Authorization.cpp  CMakeLists.txt  DBproviderConfig.cpp  DBproviderImpl.cpp  GNUmakefile  Makefile.W32  aaaaProviderImpl.cpp  aaaaProviderImpl.hpp  auditProvider.cpp  auditProvider.hpp  authenticationFactory.cpp  authenticationFactory.hpp  authorizationProvider.cpp  authorizationProvider.hpp  databaseProviderImpl.cpp  databaseProviderImpl.hpp  ddlProgram.cpp  ddlProgram.hpp  normalizeProgram.cpp  normalizeProgram.hpp  procProviderImpl.cpp  procProviderImpl.hpp  programLibraryImpl.cpp  programLibraryImpl.hpp  providerUtils.hpp  randomGeneratorImpl.cpp  randomGeneratorImpl.hpp  standardAudit.cpp  standardAudit.hpp  standardAuthenticator.cpp  standardAuthenticator.hpp  standardAuthorizer.cpp  standardAuthorizer.hpp
src/libwfsingleton/: CMakeLists.txt  GNUmakefile  Makefile.W32  globalRndGen.cpp
src/libwfsingleton/logger/: logBackendEventlog.cpp  logBackendFile.cpp
src/libwolframe/: CMakeLists.txt  CRAM.cpp  GNUmakefile  Makefile.W32  passwordChangeMessage.cpp  passwordHash.cpp  platform.cpp  usernameHash.cpp
src/libwolframe/aaaa/: CRAM.cpp  passwordChangeMessage.cpp  passwordHash.cpp  user.cpp  usernameHash.cpp
src/libwolframe/logger/: logError.cpp
src/libwolframe/processor/: execContext.cpp
src/libwolframe/system/: platform.cpp
src/libwolframe/types/: objectPool.cpp
src/libwolframe/utils/: getPassword.cpp  parseUtils.cpp  printFormats.cpp  stringUtils.cpp
src/libwolframe_database/: CMakeLists.txt  transaction.cpp  vmTransactionOutput.cpp
src/libwolframe_database/vm/: programInstance.cpp
src/libwolframe_langbind/: CMakeLists.txt  GNUmakefile  Makefile.W32  inputfilterScope.cpp  ioFilterCommandHandler.cpp  joinfilter.cpp  output.cpp  ptreefilter.cpp  tostringfilter.cpp  typedfilterScope.cpp  typingfilter.cpp
src/libwolframe_serialize/: CMakeLists.txt  GNUmakefile  Makefile.W32  configSerialize.cpp  cppFormFunction.cpp  tostringUtils.cpp
src/libwolframe_serialize/ddl/: ddlStructParser.cpp  ddlStructSerializer.cpp
src/modules/: CMakeLists.txt  GNUmakefile  Makefile.W32
src/provider/: AAAAproviderConfig.cpp  AAAAproviderImpl.hpp  Audit.cpp  Authentication.cpp  Authorization.cpp  DBproviderConfig.cpp  DBproviderImpl.cpp  DBproviderImpl.hpp  GNUmakefile  Makefile.W32  moduleDirectory.cpp  procProviderImpl.cpp  procProviderImpl.hpp  programLibraryImpl.cpp
src/wolfilter/: CMakeLists.txt  GNUmakefile  Makefile.W32  contentOnlyProtocolHandler.cpp  wolfilter.cpp  wolfilterCommandLine.cpp  wolfilterCommandLine.hpp  wolfilterIostreamFilter.cpp
src/wolframed/: CMakeLists.txt  GNUmakefile  Makefile.W32  acceptor.cpp  connection.cpp  connectionBase.hpp  errorCode.hpp  mainConnectionHandler.cpp  posixMain.cpp  server.cpp  server.hpp  serverConnectionHandler.cpp  serverConnectionHandler.hpp  serverEndpoint.cpp  serverHandler.cpp  serverHandler.hpp  winMain.cpp  wolframe.conf  wolframe.xml  wolframedCommandLine.cpp  wolframedCommandLine.hpp
src/wolfwizard/: GNUmakefile  Makefile.W32  wolfwizard.cpp  wolfwizardCommandLine.cpp  wolfwizardCommandLine.hpp
tests/: CMakeLists.txt  GNUmakefile  Makefile.W32  base64Test.cpp  configStructParser.cpp  logTest.cpp  platformTest.cpp  poolTest.cpp  testFiletypeRecognition.cpp  testRand.cpp  testWolfilter.cpp  versionTest.cpp
tests/authentication/: CMakeLists.txt  GNUmakefile  Makefile.W32
tests/crypto/: CMakeLists.txt  CRAMtest.cpp  GNUmakefile  Makefile.W32
tests/database/: CMakeLists.txt  GNUmakefile  Makefile.W32
tests/doxygen_examples/: CMakeLists.txt
tests/expect/: GNUmakefile  testEcho.ex
tests/moduleloader/: CMakeLists.txt  GNUmakefile  Makefile.W32  moduleTest.cpp
tests/modules/: CMakeLists.txt
tests/protocol/: CMakeLists.txt
tests/wolfilter/: CMakeLists.txt  GNUmakefile  Makefile.W32
wtest/: CMakeLists.txt  GNUmakefile  Makefile.W32  testDescription.cpp  testModules.cpp
(+810 files in other folders)
