cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory(audit)
add_subdirectory(authentication)
add_subdirectory(authorization)
add_subdirectory(cmdbind)
add_subdirectory(database)
add_subdirectory(datatype)
add_subdirectory(ddlcompiler)
add_subdirectory(doctype)
add_subdirectory(filter)
add_subdirectory(normalize)
add_subdirectory(prnt)
add_subdirectory(protocol)
