cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

add_subdirectory(CommandHandlerModule)
add_subdirectory(DoctypeDetectionModule)
add_subdirectory(FilterModule)
add_subdirectory(FormFunctionModule)
add_subdirectory(ProgramTypeModule)
add_subdirectory(DDLCompilerModule)
add_subdirectory(CustomDataTypeModule)
add_subdirectory(NormalizerModule)
add_subdirectory(RuntimeEnvironmentModule)
add_subdirectory(AuthenticatorModule)
add_subdirectory(DatabaseModule)
